# wifi_file_server

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 3.js  3.json  888.js  999.js  article.html  article.js  audio.html  browser.html  custom-.js  custom-bar-renderer.js  custom-bottom-sheet.js  custom-dialog-rename.js  custom-dialog-textarea.js  custom-dialog.js  custom-drawer.js  custom-editor-bar.js  custom-editor-menu.js  custom-favorites.js  custom-files.js  custom-image-viewer.js  custom-media-item.js  custom-menu.js  custom-search.js  dialog.js  editor.html  editor.js  html.html  index.html  index.js  layout.js  main.go  markdown-it.js  notes.html  notes.js  shared.go  shared.js  srt.go  style.css  toast.js  topbar.js  (+6 more)
app/src/main/assets/audio/: custom-player-bar.js
app/src/main/assets/css/: index.css  notes.css
app/src/main/assets/files/: audio.html  custom-bottom-sheet.js  custom-editor-bar.js  custom-editor-menu.js  custom-favorites.js  editor.css  editor.html  index.css  index.html  index.js  shared.js  upload.js  video.html
app/src/main/assets/js/: 3.js  article.js  custom-bottom-grid.js  custom-bottom-sheet.js  custom-dialog-rename.js  custom-drawer.js  custom-editor-bar.js  custom-files.js  custom-media-item.js  custom-navigation-bar.js  custom-sort.js  editor.js  nav.js  toast.js
app/src/main/jni/: AndroidUtils.cpp  AndroidUtils.h  CMakeLists.txt  FileUtils.cpp  FileUtils.h  StringUtils.cpp  StringUtils.h  httplib.cc  httplib.h  logging.cpp  nativelib.cpp  nativelib.h  test.c
app/src/main/jni/ArduinoJson/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
(+75 files in other folders)
